--- a/pom.xml
+++ b/pom.xml
@@ -2,11 +2,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <name>Hosebird Client</name>
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.twitter</groupId>
+  <groupId>com.chirpify</groupId>
   <artifactId>hbc</artifactId>
   <packaging>pom</packaging>
   <version>2.2.1-SNAPSHOT</version>
-  <url>http://github.com/twitter/hbc</url>
+  <url>https://github.com/Chirpify/hbc</url>
   <description>A Java HTTP client for consuming Twitter's Streaming API</description>
   <modules>
     <module>hbc-core</module>
@@ -29,9 +29,9 @@
     </dependency>
   </dependencies>
   <scm>
-    <connection>scm:git:git@github.com:twitter/hbc.git</connection>
-    <url>scm:git:git@github.com:twitter/hbc.git</url>
-    <developerConnection>scm:git:git@github.com:twitter/hbc.git</developerConnection>
+    <connection>scm:git:git@github.com:Chirpify/hbc.git</connection>
+    <url>scm:git:git@github.com:Chirpify/hbc.git</url>
+    <developerConnection>scm:git:git@github.com:Chirpify/hbc.git</developerConnection>
   </scm>
   <licenses>
     <license>
