--- a/hbc-core/pom.xml
+++ b/hbc-core/pom.xml
@@ -7,7 +7,7 @@
   <packaging>jar</packaging>
   <name>Hosebird Client Core</name>
   <parent>
-    <groupId>com.twitter</groupId>
+    <groupId>com.chirpify</groupId>
     <artifactId>hbc</artifactId>
     <version>2.2.1-SNAPSHOT</version>
   </parent>
