--- a/hbc-twitter4j/pom.xml
+++ b/hbc-twitter4j/pom.xml
@@ -3,12 +3,12 @@
   <parent>
     <groupId>com.chirpify</groupId>
     <artifactId>hbc</artifactId>
-    <version>2.2.1-SNAPSHOT</version>
+    <version>3.0.0</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.chirpify</groupId>
   <artifactId>hbc-twitter4j</artifactId>
-  <version>2.2.1-SNAPSHOT</version>
+  <version>3.0.0</version>
   <packaging>jar</packaging>
   <name>Hosebird Client Twitter4J</name>
   <properties>
@@ -18,7 +18,7 @@
     <dependency>
       <groupId>com.chirpify</groupId>
       <artifactId>hbc-core</artifactId>
-      <version>2.2.1-SNAPSHOT</version>
+      <version>3.0.0</version>
     </dependency>
     <dependency>
       <groupId>com.google.guava</groupId>
