--- a/hbc-twitter4j/pom.xml
+++ b/hbc-twitter4j/pom.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
-    <groupId>com.chirpify</groupId>
+    <groupId>com.twitter</groupId>
     <artifactId>hbc</artifactId>
     <version>3.0.0</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.chirpify</groupId>
+  <groupId>com.twitter</groupId>
   <artifactId>hbc-twitter4j</artifactId>
   <version>3.0.0</version>
   <packaging>jar</packaging>
@@ -16,7 +16,7 @@
   </properties>
   <dependencies>
     <dependency>
-      <groupId>com.chirpify</groupId>
+      <groupId>com.twitter</groupId>
       <artifactId>hbc-core</artifactId>
       <version>3.0.0</version>
     </dependency>
